[metadata]
metadata-version = 1.2
name = yamoda
version = 0.0.dev1
summary = yamoda is a database driven measurement data storage application
download-URL = UNKNOWN
description-file = README.md
home-page = http://github.com/ProjektAugustiner
author = Georg Brandl, Marco Halder, Tobias Stenzel
author-email = georg.brandl@frm2.tum.de, marco.halder@frm2.tum.de, Tobi.Stenzel@gmx.de
classifier = 
    License :: OSI Approved :: GNU General Public License (GPL)
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: Linux

[files]
packages = yamoda 
    yamoda.client
    yamoda.query
    yamoda.server
    yamoda.server.database
    yamoda.server.views
    yamoda.importer

scripts =
    run_server.py
    test_import.py
    compile_coffee.py
    init_db.py

extra_files = 
    console-env.py
    AUTHORS.md
    buildout.cfg
    README.md
    COPYING
    setup.py
